--- a/app/deployment.yml
+++ b/app/deployment.yml
@@ -16,4 +16,4 @@ spec:
     spec:
       containers:
       - name: hello-world-container
-        image: hello-world:latest
+        image: busybox:glibc
