--- a/app/nginx.yml
+++ b/app/nginx.yml
@@ -1,19 +1,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: hello-deployment
+  name: nginx-deployment
   labels:
-    app: hello-world
+    app: nginx
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: hello-world
+      app: nginx
   template:
     metadata:
       labels:
-        app: hello-world
+        app: nginx
     spec:
       containers:
-      - name: hello-world-container
-        image: busybox:glibc
+      - name: nginx-container
+        image: nginx:1.14
