--- a/applications/kiam/values.yaml
+++ b/applications/kiam/values.yaml
@@ -11,8 +11,8 @@ server:
   ##
   tlsFiles:
     ca.pem :
-    cert.pem :
-    key.pem :
+    server.pem :
+    server-key.pem :
 
   ## Node labels for pod assignment
   ## Ref: https://kubernetes.io/docs/user-guide/node-selection/
