--- a/applications/kiam/templates/server-daemonset.yaml
+++ b/applications/kiam/templates/server-daemonset.yaml
@@ -56,7 +56,7 @@ spec:
               - --cert=/etc/kiam/tls/server.pem
               - --key=/etc/kiam/tls/server-key.pem
               - --ca=/etc/kiam/tls/ca.pem
-              - --server-address=localhost:443
+              - --server-address={{ .Values.server.livenessProbe.address }}:443
               - --gateway-timeout-creation=1s
               - --timeout=5s
             initialDelaySeconds: 10
@@ -72,7 +72,7 @@ spec:
               - --cert=/etc/kiam/tls/server.pem
               - --key=/etc/kiam/tls/server-key.pem
               - --ca=/etc/kiam/tls/ca.pem
-              - --server-address=localhost:443
+              - --server-address={{ .Values.server.readinessProbe.address }}:443
               - --gateway-timeout-creation=1s
               - --timeout=5s
             initialDelaySeconds: 3
