--- a/applications/kiam/templates/server-daemonset.yaml
+++ b/applications/kiam/templates/server-daemonset.yaml
@@ -79,3 +79,9 @@ spec:
             periodSeconds: 10
             timeoutSeconds: 10
         {{- end }}
+        {{- if .Values.server.resources }}
+          resources:
+{{ toYaml .Values.server.resources | indent 12 }}
+        {{- end }}
+  updateStrategy:
+    type: {{ .Values.server.updateStrategy }}
