--- a/applications/kiam/values.yaml
+++ b/applications/kiam/values.yaml
@@ -1,28 +1,21 @@
 
 server:
-  namespace: aws
+  namespace: kube-system
 
   podAnnotations: {}
+
+  nodeSelector: {}
+
+  tolerations: []
 
   image:
     tag: v3.0-rc1
 
-  ## Base64-encoded PEM values for agent's CA certificate(s), certificate and private key
-  ##
+  ## Base64-encoded PEM values for server's CA certificate(s), certificate and private key
   tlsFiles:
-    ca.pem :
-    server.pem :
-    server-key.pem :
-
-  ## Node labels for pod assignment
-  ## Ref: https://kubernetes.io/docs/user-guide/node-selection/
-  ##
-  nodeSelector: {}
-    # kubernetes.io/role: node
-  ## Pod tolerations
-  ## Ref https://kubernetes.io/docs/concepts/configuration/taint-and-toleration/
-  ##
-  tolerations: []
+    ca.pem : 
+    server.pem : 
+    server-key.pem : 
 
   livenessProbe:
     address: "127.0.0.1"
@@ -31,3 +24,33 @@ server:
   readinessProbe:
     enabled: true
     address: "127.0.0.1"
+
+  resources: 
+    limits:
+      memory: 512Mi
+      cpu: 500m
+    requests:
+      cpu: 200m
+      memory: 128Mi
+
+  updateStrategy: RollingUpdate
+
+
+agent:
+  # namespace: kube-system
+
+  # podAnnotations: {}
+
+  # nodeSelector: {}
+
+  # tolerations: []
+
+  # image:
+  #   tag: v3.0-rc1
+
+
+  ## Base64-encoded PEM values for agent's CA certificate(s), certificate and private key
+  tlsFiles:
+    ca.pem : 
+    agent.pem : 
+    agent-key.pem : 
