--- a/applications/kiam/templates/agent-daemonset.yaml
+++ b/applications/kiam/templates/agent-daemonset.yaml
@@ -52,7 +52,7 @@ spec:
             - --cert=/etc/kiam/tls/agent.pem
             - --key=/etc/kiam/tls/agent-key.pem
             - --ca=/etc/kiam/tls/ca.pem
-            - --server-address=kiam-server:443
+            - --server-address={{ .Values.agent.serverAddress }}
             - --prometheus-listen-addr=0.0.0.0:9620
             - --prometheus-sync-interval=5s
             - --gateway-timeout-creation=1s
