--- a/applications/kiam/templates/server-daemonset.yaml
+++ b/applications/kiam/templates/server-daemonset.yaml
@@ -34,9 +34,8 @@ spec:
           image: quay.io/uswitch/kiam:{{ .Values.server.image.tag }}
           imagePullPolicy: Always
           command:
-            - /kiam
+            - /server
           args:
-            - server
             - --json-log
             - --bind=0.0.0.0:443
             - --cert=/etc/kiam/tls/server.pem
@@ -60,8 +59,7 @@ spec:
           livenessProbe:
             exec:
               command:
-              - /kiam
-              - health
+              - /health
               - --cert=/etc/kiam/tls/server.pem
               - --key=/etc/kiam/tls/server-key.pem
               - --ca=/etc/kiam/tls/ca.pem
@@ -76,8 +74,7 @@ spec:
           readinessProbe:
             exec:
               command:
-              - /kiam
-              - health
+              - /health
               - --cert=/etc/kiam/tls/server.pem
               - --key=/etc/kiam/tls/server-key.pem
               - --ca=/etc/kiam/tls/ca.pem
