--- a/applications/kiam/templates/server-service.yaml
+++ b/applications/kiam/templates/server-service.yaml
@@ -8,7 +8,7 @@ spec:
     app: kiam
     role: server
   ports:
-  - name: grpclb
+  - name: grpc
     port: 443
     targetPort: 443
     protocol: TCP
