--- a/applications/kiam/values.yaml
+++ b/applications/kiam/values.yaml
@@ -9,7 +9,7 @@ server:
   tolerations: []
 
   image:
-    tag: "2.7"
+    tag: "v2.7"
 
   ## Base64-encoded PEM values for server's CA certificate(s), certificate and private key
   tlsFiles:
@@ -44,7 +44,7 @@ agent:
   tolerations: []
 
   image:
-    tag: "2.7"
+    tag: "v2.7"
 
   ## Base64-encoded PEM values for agent's CA certificate(s), certificate and private key
   tlsFiles:
