--- a/applications/kiam/templates/server-daemonset.yaml
+++ b/applications/kiam/templates/server-daemonset.yaml
@@ -41,9 +41,16 @@ spec:
             - --cert=/etc/kiam/tls/server.pem
             - --key=/etc/kiam/tls/server-key.pem
             - --ca=/etc/kiam/tls/ca.pem
+            {{- if .Values.server.roleBaseArn }}
+            - --role-base-arn={{ .Values.server.roleBaseArn }}
+            {{- else }}
             - --role-base-arn-autodetect
-            - --sync=1m
-            - --session-duration=900s
+            {{- end }}
+            {{- if .Values.server.assumeRoleArn }}
+            - --assume-role-arn={{ .Values.server.assumeRoleArn }}
+            {{- end }}
+            - --session-duration={{ .Values.server.sessionDuration }}
+            - --sync={{ .Values.server.cache.syncInterval }}
             - --prometheus-listen-addr=0.0.0.0:9620
             - --prometheus-sync-interval=5s
         {{- if .Values.server.extraEnv }}
